@@ -26,11 +26,51 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
+import org.apache.geode.distributed.internal.deadlock.UnsafeThreadLocal;
+import org.apache.geode.internal.offheap.AddressableMemoryManager;
+import org.apache.geode.internal.stats50.VMStats50;
+import org.apache.geode.unsafe.internal.com.sun.jmx.remote.security.MBeanServerAccessController;
+import org.apache.geode.unsafe.internal.sun.nio.ch.DirectBuffer;
+
 public class MemberJvmOptions {
   static final int CMS_INITIAL_OCCUPANCY_FRACTION = 60;
-  private static final List<String> JAVA_11_OPTIONS = Arrays.asList(
-      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
-      "--add-exports=java.management/com.sun.jmx.remote.security=ALL-UNNAMED");
+  /**
+   * export needed by {@link DirectBuffer}
+   */
+  private static final String SUN_NIO_CH_EXPORT =
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED";
+  /**
+   * export needed by {@link MBeanServerAccessController}
+   */
+  private static final String COM_SUN_JMX_REMOTE_SECURITY_EXPORT =
+      "--add-exports=java.management/com.sun.jmx.remote.security=ALL-UNNAMED";
+  /**
+   * open needed by {@link UnsafeThreadLocal}
+   */
+  private static final String JAVA_LANG_OPEN = "--add-opens=java.base/java.lang=ALL-UNNAMED";
+
+  /**
+   * open needed by {@link VMStats50}
+   */
+  private static final String SUN_MANAGEMENT_OPEN =
+      "--add-opens=java.management/sun.management=ALL-UNNAMED";
+  /**
+   * open needed by {@link AddressableMemoryManager}
+   */
+  private static final String JAVA_NIO_OPEN = "--add-opens=java.base/java.nio=ALL-UNNAMED";
+  /**
+   * open needed by {@link VMStats50}
+   */
+  private static final String COM_SUN_MANAGEMENT_INTERNAL_OPEN =
+      "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED";
+
+  static final List<String> JAVA_11_OPTIONS = Arrays.asList(
+      COM_SUN_JMX_REMOTE_SECURITY_EXPORT,
+      SUN_NIO_CH_EXPORT,
+      COM_SUN_MANAGEMENT_INTERNAL_OPEN,
+      JAVA_LANG_OPEN,
+      JAVA_NIO_OPEN,
+      SUN_MANAGEMENT_OPEN);
 
   public static List<String> getMemberJvmOptions() {
     if (isJavaVersionAtLeast(JAVA_11)) {
