@@ -42,9 +42,7 @@ class MemberJvmOptionsTest {
   @Test
   @EnabledForJreRange(min = JRE.JAVA_11)
   void java11Options() {
-    List<String> expectedOptions = asList(
-        "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
-        "--add-exports=java.management/com.sun.jmx.remote.security=ALL-UNNAMED");
+    List<String> expectedOptions = MemberJvmOptions.JAVA_11_OPTIONS;
 
     assertThat(getMemberJvmOptions())
         .containsExactlyElementsOf(expectedOptions);
